src/snapshots/transmute__type_check__tests__resolve_ref_to_let_fn.snap
---
source: src/type_check.rs
expression: "XmlWriter::new(&ast, &symbol_table).serialize()"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <scopes>
    <scope id="scope:0">
      <child ref="scope:1" />
    </scope>
    <scope id="scope:1" parent="scope:0">
      <child ref="scope:2" />
    </scope>
    <scope id="scope:2" parent="scope:1">
      <child ref="scope:3" />
    </scope>
    <scope id="scope:3" parent="scope:2" />
  </scopes>
  <symbols>
    <symbol id="sym:0" scope="scope:0">
      <native>
        <name>sub</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:1" scope="scope:0">
      <native>
        <name>neq</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:2" scope="scope:0">
      <native>
        <name>neq</name>
        <parameters>
          <parameter>boolean</parameter>
          <parameter>boolean</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:3" scope="scope:0">
      <native>
        <name>neg</name>
        <parameters>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:4" scope="scope:0">
      <native>
        <name>mul</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:5" scope="scope:0">
      <native>
        <name>lt</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:6" scope="scope:0">
      <native>
        <name>le</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:7" scope="scope:0">
      <native>
        <name>gt</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:8" scope="scope:0">
      <native>
        <name>ge</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:9" scope="scope:0">
      <native>
        <name>eq</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:10" scope="scope:0">
      <native>
        <name>eq</name>
        <parameters>
          <parameter>boolean</parameter>
          <parameter>boolean</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:11" scope="scope:0">
      <native>
        <name>div</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:12" scope="scope:0">
      <native>
        <name>add</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:13" scope="scope:1">
      <statement ref="stmt:0" />
    </symbol>
  </symbols>
  <ast>
    <identifiers>
      <ident id="ident:0">x</ident>
      <ident id="ident:1">add</ident>
      <ident id="ident:2">div</ident>
      <ident id="ident:3">eq</ident>
      <ident id="ident:4">ge</ident>
      <ident id="ident:5">gt</ident>
      <ident id="ident:6">le</ident>
      <ident id="ident:7">lt</ident>
      <ident id="ident:8">mul</ident>
      <ident id="ident:9">neg</ident>
      <ident id="ident:10">neq</ident>
      <ident id="ident:11">sub</ident>
    </identifiers>
    <stmt id="stmt:0" line="1" column="1" start="0" len="13" scope="scope:1">
      <fn>
        <identifier ref="ident:0" line="1" column="5" start="4" len="1">x</identifier>
        <parameters />
        <body line="1" column="11" start="10" len="3">
          <expr id="expr:0" line="1" column="11" start="10" len="3" scope="scope:2">
            <block />
          </expr>
        </body>
      </fn>
    </stmt>
    <stmt id="stmt:1" line="1" column="15" start="14" len="4" scope="scope:1">
      <expr id="expr:1" line="1" column="15" start="14" len="3" scope="scope:1">
        <call line="1" column="15" start="14" len="3" ident-ref="ident:0" name="x" target-id="stmt:0" />
      </expr>
    </stmt>
  </ast>
</unit>
